# FileManager

./: .gitignore  CMakeLists.txt  README.md
app/: Application.cpp  Application.h  ConsoleInterface.cpp  ConsoleInterface.h  main.cpp
core/: BackupCatalog.cpp  BackupCatalog.h  BackupTaskContext.h  BackupTypes.cpp  BackupTypes.h  BackupUtils.cpp  BackupUtils.h  DaemonUtils.cpp  DaemonUtils.h  DevTrace.cpp  DevTrace.h  MetadataRepository.cpp  MetadataRepository.h  TaskQueue.cpp  TaskQueue.h
tasks/: AddFileTask.cpp  AddFileTask.h  DeleteFileTask.cpp  DeleteFileTask.h  IBackupTask.h  ModifyFileTask.cpp  ModifyFileTask.h  RepairBackupTask.cpp  RepairBackupTask.h  RestoreFileTask.cpp  RestoreFileTask.h
workers/: BackupWorker.cpp  BackupWorker.h  FolderMonitor.cpp  FolderMonitor.h
